# powerreader

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
mosquitto/: mosquitto.acl.example
powerreader/: __init__.py  aggregation.py  api.py  config.py  db.py  main.py  mqtt.py
powerreader/static/: common.js  style.css
powerreader/templates/: admin.html  base.html  dashboard.html  export.html  log.html
tests/: conftest.py  test_aggregation.py  test_api.py  test_db.py  test_main.py  test_mqtt.py
