[project]
name = "powerreader"
version = "1.0.3"
description = "Self-hosted power consumption monitor via MQTT and Tasmota"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "paho-mqtt>=2.1",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--cov=powerreader --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"
